tests/ast_interpreter/err_fun_arg_eval.expected
<string>:6:10: error: undeclared variable "undeclaredVar"
    test(undeclaredVar);
         ^^^^^^^^^^^^^
