tests/ast_interpreter/err_fun_arg_eval.nx
fun test(x) {
    print(x);
}

fun main() {
    test(undeclaredVar);
}